<?xml version="1.0" encoding="utf-8"?>
<com.flavienlaurent.discrollview.lib.DiscrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:discrollve="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
        <com.flavienlaurent.discrollview.lib.DiscrollViewContent
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:background="@android:color/white"
                android:textColor="@android:color/black"
                android:padding="25dp"
                android:textSize="52sp"
                tools:visibility="gone"
                android:gravity="center"
                android:fontFamily="serif"
                android:text="@string/ingredients_title"
            />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:src="@drawable/milk_pic"
                discrollve:discrollve_scaleX="true"
                discrollve:discrollve_scaleY="true"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:textSize="52sp"
                discrollve:discrollve_alpha="true"
                discrollve:discrollve_translation="fromBottom"
                android:text="@string/ingredients_used"
                android:background="@color/lightGrey"
            />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:src="@drawable/milk_cow"
                discrollve:discrollve_scaleX="true"
                discrollve:discrollve_scaleY="true"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:textSize="52sp"
                discrollve:discrollve_alpha="true"
                discrollve:discrollve_translation="fromBottom"
                android:text="@string/ingredients_cow"
                android:background="@color/lightGreen"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:textSize="52sp"
                discrollve:discrollve_alpha="true"
                discrollve:discrollve_translation="fromBottom"
                android:text="@string/ingredients_tapioca_balls"
            />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                discrollve:discrollve_scaleX="true"
                discrollve:discrollve_scaleY="true"
                android:src="@drawable/flower"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:textSize="52sp"
                discrollve:discrollve_alpha="true"
                discrollve:discrollve_translation="fromBottom"
                android:text="@string/ingredients_tapioca_balls_pic"
                android:background = "@color/lightYellow"
            />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                discrollve:discrollve_scaleX="true"
                discrollve:discrollve_scaleY="true"
                android:src="@drawable/tapioca_image"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:textSize="52sp"
                discrollve:discrollve_alpha="true"
                discrollve:discrollve_translation="fromBottom"
                android:text="@string/ingredients_tea_leaves"
                android:background = "@color/lightYellow"
            />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                discrollve:discrollve_alpha="true"
                discrollve:discrollve_translation="fromLeft|fromBottom"
                android:src="@drawable/tea_farm"
             />

            <ImageView
                android:layout_width="220dp"
                android:layout_height="110dp"
                android:layout_gravity="right"
                android:src="@drawable/tea_farm_2"
                discrollve:discrollve_translation="fromRight"
             />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:textSize="52sp"
                discrollve:discrollve_alpha="true"
                discrollve:discrollve_translation="fromBottom"
                android:text="@string/Conclusion"
                android:background = "@color/Red"
            />

        </com.flavienlaurent.discrollview.lib.DiscrollViewContent>
</com.flavienlaurent.discrollview.lib.DiscrollView>
